--- a/ht-indexer/conf/ht-indexer.properties
+++ b/ht-indexer/conf/ht-indexer.properties
@@ -2,3 +2,5 @@ id.file=ngpd_ids.txt
 zkHost=http://compute-0-3:9447
 ocrBasePath=/data/hathi0/ngpd/NGPD
 marcBasePath=/data/hathi0/marc/ngpd
+languages=eng
+indexingLevel=VOLUME
